Cleanup of some stuff.
Do not use != for strings. use equals.
etc. etc.